--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -30,10 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  barcode_scan2: 4.2.0
-  firebase_core: ^2.24.2
+  mobile_scanner: ^3.1.0
+  firebase_core: ^2.26.0
+  firebase_storage: ^11.3.0
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
+  path_provider: ^2.0.17
+  googleapis: ^14.0.0
+  googleapis_auth: ^1.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -59,7 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/flutter-practice-471914-504ada6d4766.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
