--- a/myapp/android/app/src/main/AndroidManifest.xml
+++ b/myapp/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:name="${applicationName}"
-        android:label="myapp"
+        android:label="AttendanceUploadDemo"
         android:icon="@mipmap/ic_launcher">
 
         <activity
